--- Give the SDK definition getters defaults and then plain types
BaseProperty.getRequired()/getMetadata() previously returned a defaulted
Boolean.FALSE and an unmodifiable map, which collapsed "unspecified" into
"not required" at the SDK boundary -- a component could not express
"leave this one to the caller". Both moved to Optional first, with the
DSL builders dropping their FALSE seed so the platform domain wrappers
apply the default in one place instead of every producer baking it in.

Default implementations were then added across definition-api and
component-api (90 methods): booleans default to false, lists to List.of(),
maps to Map.of(), everything else to Optional.empty(), with ComponentDsl's
Modifiable* builders seeding the matching fields so the overrides agree
with the interface defaults.

The getters whose default always carries a value then drop Optional
entirely, since Optional never conveyed absence for them -- it only
forced an unwrap at every call site and made an empty Optional from a
hand-rolled implementor a runtime fault:
- getVersion returns int rather than OptionalInt.
- required, hidden, advancedOption, expressionEnabled, multipleValues and
  optionsLoadedDynamically return boolean.
- The property, action, trigger, cluster element, component, connection
  and authorization collection getters return plain List/Map.
- getRefreshOn declares DEFAULT_REFRESH_ON at the declaration rather than
  relying on every caller to re-apply the HTTP 401 fallback.
- deprecated(...) setters tighten to primitive boolean, matching their
  sibling setters; a caller passing null would otherwise null the field
  and make the getter throw on auto-unboxing.

Also renames BaseResources.documentationUrl() to getDocumentationUrl()
for accessor consistency.